<resources>
    <string name="app_name">NY Times</string>
    <string name="s_item1">HSE Student)))</string>
    <string name="s_item2">Developer:)</string>
    <string name="s_item3">Member of a university crew!</string>
    <string name="s_item4">Member of a university crew! Member of a university crew! Member of a university crew! Member of a university crew! Member of a university crew! Member of a university crew! Member of a university crew!</string>
    <string name="enter_a_message">Enter a message…</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="vk">VK</string>
    <string name="my_photo">myPhoto</string>
    <string name="full_photo">full_photo</string>
    <string name="title_details">title_details</string>
    <string name="preview_photo">preview_photo</string>
    <string name="retry_action">Retry</string>
    <string name="error_message">Loading news was unsuccessful</string>
    <string name="content_desc_default" translatable="false">Decoration</string>


    <string name="top_stories_category_home">Home</string>
    <string name="top_stories_category_opinion">Opinion</string>
    <string name="top_stories_category_world">World</string>
    <string name="top_stories_category_national">National</string>
    <string name="top_stories_category_politics">Politics</string>
    <string name="top_stories_category_upshot">Upshot</string>
    <string name="top_stories_category_nyregion">NY region</string>
    <string name="top_stories_category_business">Business</string>
    <string name="top_stories_category_technology">Technology</string>
    <string name="top_stories_category_science">Science</string>
    <string name="top_stories_category_health">Health</string>
    <string name="top_stories_category_sports">Sports</string>
    <string name="top_stories_category_arts">Arts</string>
    <string name="top_stories_category_books">Books</string>
    <string name="top_stories_category_movies">Movies</string>
    <string name="top_stories_category_theater">Theater</string>
    <string name="top_stories_category_sundayreview">Sunday review</string>
    <string name="top_stories_category_fashion">Fashion</string>
    <string name="top_stories_category_tmagazine">T-magazine</string>
    <string name="top_stories_category_food">Food</string>
    <string name="top_stories_category_travel">Travel</string>
    <string name="top_stories_category_magazine">Magazine</string>
    <string name="top_stories_category_realestate">Real estate</string>
    <string name="top_stories_category_automobiles">Automobiles</string>
    <string name="top_stories_category_obituaries">Obituaries</string>
    <string name="top_stories_category_insider">Insider</string>
</resources>