<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:id="@+id/image_d"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:contentDescription="@string/my_photo"
                android:src="@drawable/daniel"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/first"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="@string/s_item1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/second"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="@string/s_item2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/third"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="@string/s_item3" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#FF0000"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/s_item4" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#FF0000"
                    tools:ignore="SmallSp" />

                <EditText
                    android:id="@+id/enter_message"
                    android:layout_width="fill_parent"
                    android:layout_height="28dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="Hi there!"
                    android:background="@drawable/edittext_bottom_line"
                    android:hint="@string/enter_a_message"
                    android:inputType="text"
                    android:textIsSelectable="true" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:gravity="end"
                    android:text="@string/send_message"
                    android:textColor="#FF0000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="382dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/vk"
                    android:focusable="true"
                    android:onClick="vkClick"
                    android:src="@drawable/vk" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/vk"
                    android:focusable="true"
                    android:onClick="instClick"
                    android:src="@drawable/inst" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>